# RootSlice

./: .gitignore  CMakeLists.txt  CorticalData.xml  InputData.xml  InputData_dicot.xml  README.md  RootSlice.sln  RootSlice.vcxproj  RootSlice.vcxproj.filters  fluxInput_.xml
code_files/: fluxEqns.cpp  globals.cpp  lsoda.cpp  main.cpp  resources.cpp  rsBaseGeometry.cpp  rsBaseGeometryMX.cpp  rsBaseGeometryPX.cpp  rsDataOutput.cpp  rsDynamicDataOutput.cpp  rsEpiCortexEndoWaterPathDB.cpp  rsEpiCortexEndoWaterPathDBVisual.cpp  rsMXBoundaryDB.cpp  rsMXBoundaryOutDB.cpp  rsMXBoundaryOutVisual.cpp  rsMXBoundaryVisual.cpp  rsMXCoreDB.cpp  rsMXCoreVisual.cpp  rsPXBoundaryDB.cpp  rsPXBoundaryVisual.cpp  rsPXCoreDB.cpp  rsPXCoreVisual.cpp  rsPhloemDB.cpp  rsPhloemVisual.cpp  rsRcaDB.cpp  rsSourceCorticalDB.cpp  rsSourceCorticalVisual.cpp  rsSourceDermisDB.cpp  rsSourceDermisVisual.cpp  rsSourceEpidermisDB.cpp  rsSourceEpidermisVisual.cpp  rsSteleInnerDB.cpp  rsSteleInnerVisual.cpp  tinystr.cpp  tinyxml.cpp  tinyxmlparser.cpp  viStringTokenizer.cpp
include/: fluxEqns.h  globals.h  lsoda.h  resources.h  rsBaseGeometry.h  rsBaseGeometryMX.h  rsBaseGeometryPX.h  rsDataOutput.h  rsDynamicDataOutput.h  rsEpiCortexEndoWaterPathDB.h  rsEpiCortexEndoWaterPathDBVisual.h  rsMXBoundaryDB.h  rsMXBoundaryOutDB.h  rsMXBoundaryOutVisual.h  rsMXBoundaryVisual.h  rsMXCoreDB.h  rsMXCoreVisual.h  rsPXBoundaryDB.h  rsPXBoundaryVisual.h  rsPXCoreDB.h  rsPXCoreVisual.h  rsPhloemDB.h  rsPhloemVisual.h  rsRcaDB.h  rsSourceCorticalDB.h  rsSourceCorticalVisual.h  rsSourceDermisDB.h  rsSourceDermisVisual.h  (+5 more)
(+8 files in other folders)
